api/components/index.css
html,
body {
  font-family: "Inter", sans-serif;
  font-size: 20px;
  margin: 0;
  padding: 0;
  background: linear-gradient(
    218.34deg,
    rgba(175, 177, 245, 0.86) 22.08%,
    #854fe3 90.71%
  );
}

h2 {
  margin: 0 0 0.75rem 0;
  font-size: 1rem;
}

h4 {
  margin: 0 0 0.75rem 0;
  font-size: 0.7rem;
}

ol,
ul {
  list-style-type: none;
  padding: 0;
  margin: 0;

  & > li {
    margin: 0;
    padding: 0;
  }
}

.layout {
  display: grid;
  height: 100vh;
  grid-template-columns: repeat(2, 1fr);
  margin: 0;
}

.top-questions-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background: linear-gradient(
    218.34deg,
    rgba(50, 51, 77, 0.86) 22.08%,
    #2a1059 90.71%
  );
  color: white;
}

.qr-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  color: black;
}

/* TopQuestions */

.top-questions-layout {
  display: grid;
  grid-template-rows: max-content 1fr max-content;
  max-height: calc(100vh - 4rem);
  margin: 2rem;
  height: 38rem;
  width: 100%;
}
/* TopQuestions - Header */

.top-questions-header {
  display: flex;
  justify-content: center;
}

.header-title {
  margin-bottom: 1.5rem;
}

.text-align-right {
  text-align: right;
}

.text-align-center {
  text-align: center;
}

.question-count {
  font-weight: 400;
}
/* TopQuestions - Content */

.top-questions-content {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  overflow-y: auto;
  max-height: 32rem;
}

.bubble {
  background: rgba(0, 0, 0, 0.7);
  border-radius: 5px;
  padding: 1rem 1rem 1rem 1rem;
  margin-bottom: 1.125rem;
  position: relative;

  & > h2 {
    font-size: 1.5rem;
  }
}

.upvote-section {
  display: flex;
  justify-content: flex-end;
  margin-top: 1rem;
}

.upvote-count {
  display: inline;
  color: white;
  font-weight: 100;
  margin-right: 0.25rem;
  line-height: 1rem;
}

/* TopQuestions - Footer */

.top-questions-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1rem;

  & > h2 {
    margin: 0;
  }
}

/* QR */

.qr-layout {
  display: grid;
  grid-template-rows: max-content 1fr max-content;
  margin: 2rem;
  width: 28rem;
  height: 38rem;
  max-height: calc(100vh - 4rem);
}

.qr-border {
  border: 1px solid black;
}

/* QR - Header */
.qr-header {
  display: flex;
  justify-content: space-between;
}

/* QR - Content */

.qr-content {
  padding: 0.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

/* QR - Footer */

.qr-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1rem;
  flex-direction: column;
}

/* QR - Frame */

.qr-frame {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.qr-corner {
  position: absolute;
  width: 6rem;
  height: 6rem;
}

.qr-corner-top-left {
  top: 0;
  left: 0;
  border-top: 0.6rem solid black;
  border-left: 0.6rem solid black;
}

.qr-corner-top-right {
  top: 0;
  right: 0;
  border-top: 0.6rem solid black;
  border-right: 0.6rem solid black;
}

.qr-corner-bottom-left {
  bottom: 0;
  left: 0;
  border-bottom: 0.6rem solid black;
  border-left: 0.6rem solid black;
}

.qr-corner-bottom-right {
  bottom: 0;
  right: 0;
  border-bottom: 0.6rem solid black;
  border-right: 0.6rem solid black;
}

.heart-icon-container {
  position: relative;
}

.reaction {
  position: absolute;
  bottom: 0.5rem;
  animation: floatUp 3s ease-out forwards;
}

@keyframes floatUp {
  0% {
    transform: translateY(0) scale(1);
    opacity: 1;
  }
  100% {
    transform: translateY(-40dvh) scale(2);
    opacity: 0;
  }
}

